[tool.poetry]
name = "test-parser"
version = "0.1.0"
description = ""
authors = ["Vasilevich Dmitry <vasilevich.dmt@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 119

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
beautifulsoup4 = "^4.12.3"
black = "^24.10.0"
selenium = "^4.27.1"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
